--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.28.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.8",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "4.5.4"
   }
 }
